--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,11 @@
 {
-  "name": "wployalty/wlr-point-email-reminder",
+  "name": "wployalty-point-email-reminder/wployalty-point-email-reminder",
   "description": "Wployalty point Email Reminder",
   "type": "project",
   "license": "GPL2 or Later",
-  "authors": [
-    {
-      "name": "Alagesan S",
-      "email": "alagesan@flycart.org"
-    }
-  ],
-  "require": {
-    "vlucas/valitron": "^1.4"
-  },
-  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
-      "Wser\\": ""
+      "Wlper\\": ""
     }
   }
 }
